[gd_scene load_steps=5 format=3 uid="uid://ct6d28nsebobf"]

[ext_resource type="Script" path="res://Entities/entities_script/enemy_4_bullet.gd" id="1_48i2l"]
[ext_resource type="Texture2D" uid="uid://cu07eaag718yv" path="res://Sprites/enemy_bullet_4.png" id="1_pe7d4"]
[ext_resource type="AudioStream" uid="uid://dnpwhdv22ayef" path="res://Music/SFX/13_Ice_explosion_01.wav" id="2_tvf51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lph6p"]

[node name="enemy_4_bullet" type="Area2D" groups=["enemy"]]
collision_layer = 32
collision_mask = 11
script = ExtResource("1_48i2l")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.025, 0.025)
texture = ExtResource("1_pe7d4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.8, 0.8)
shape = SubResource("CircleShape2D_lph6p")

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="bullet_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tvf51")
volume_db = -12.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
